--- a/requestbin/templates/layout.html
+++ b/requestbin/templates/layout.html
@@ -23,7 +23,7 @@
         <header class="row-fluid">
             <div class="span12">
               <h1 class="logo">
-                <a href="/"><img src="/static/img/logo-2x.png" height="38" width="44" /></a>
+                <a href="/"><img src="/static/img/recharge-logo.svg" height="38" width="44" /></a>
                 <a href="/"><span class="logo-accent">Request</span>Bin</a>
               </h1>
                 <nav>
