--- a/requestbin/templates/home.html
+++ b/requestbin/templates/home.html
@@ -14,7 +14,7 @@
 {% block content %}
     <div class="row-fluid">
         <div class="banner-hero">
-            <h2 class="banner-header"><span class="accent-bg-red">Check your WEBHOOKS</span></h2>
+            <h2 class="banner-header"><span class="accent-bg-red">Check ReCharge WebHooks</span></h2>
             <h3 class="banner-subheader">
               RequestBin gives you a URL that will collect requests made to it and let you inspect them in a human-friendly way.<br>
               Use RequestBin to see what your HTTP client is sending or to inspect and debug webhook requests.</h3>
