--- a/requestbin/static/css/styles.css
+++ b/requestbin/static/css/styles.css
@@ -42,7 +42,7 @@ hr {
   padding: 4px 8px;
 }
 .accent-bg-red {
-  background: #e74c3c;
+  background: #55ede0;
   padding: 4px 12px;
   color: #ffffff;
 }
