--- a/requestbin/templates/layout.html
+++ b/requestbin/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% block title %}RequestBin &mdash; Collect, inspect and debug HTTP requests and webhooks{% endblock %}</title>
+    <title>{% block title %}ReChargeBin &mdash; Collect, inspect and debug HTTP requests and webhooks{% endblock %}</title>
     {% block icon %}<link href="/static/img/logo.png" rel="shortcut icon" />{% endblock %}
     <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="/static/css/responsive.css" rel="stylesheet" media="screen">
@@ -24,7 +24,6 @@
             <div class="span12">
               <h1 class="logo">
                 <a href="/"><img src="/static/img/recharge-logo.svg" height="200" width="300" /></a>
-                <a href="/"><span class="logo-accent">Request</span>Bin</a>
               </h1>
                 <nav>
                     <ul class="nav-menu">
@@ -73,7 +72,7 @@
                     <img src="/static/img/logo-runscope-2x.png" height="34" width="34">
                 </div>
                 <h3 class="footer-slogan">
-                  RequestBin is brought to you by Runscope.<br>Solve API errors fast. Debug, test and share your API calls.
+                  ReCharge Bin  is brought to you by Runscope.<br>Solve API errors fast. Debug, test and share your API calls.
                   <br>
                   <a href="https://www.runscope.com/?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin">Learn more <i class="icon-long-arrow-right"></i></a>
                 </h3>
@@ -82,16 +81,7 @@
                     <a href="https://www.runscope.com/?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin" title="Learn More"><img src="/static/img/runscope-hero.png"></a>
                 </p>
 
-                <ul class="footer-menu">
-                    <li class="footer-link footer-title">Runscope</li>
-                    <li class="footer-link"><a href="https://www.runscope.com/?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin" title="Learn More">Learn More</a></li>
-                    <li class="footer-link"><a href="http://blog.runscope.com" title="Runscope Blog">Blog</a></li>
-                    <li class="footer-link"><a href="https://twitter.com/Runscope" title="Follow Runscope on Twitter">Twitter</a></li>
-                    <li class="footer-link"><a href="https://plus.google.com/110044295418761600228" rel="publisher">Google+</a></li>
-                    <li class="footer-link"><a href='https://alpha.app.net/runscope' rel='me'>App.net</a></li>
-                </ul>
-                <p class="copyright">RequestBin originally created by <a href="http://progrium.com">Jeff Lindsay</a>.</p>
-                <p class="copyright">&copy; 2013 Runscope Inc. - <a href="https://www.runscope.com/privacy?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin">Privacy Policy</a> - <a href="https://www.runscope.com/terms?utm_source=partner&amp;utm_medium=link&amp;utm_campaign=requestbin">Terms of Service</a></p>
+
             </div>
         </footer>
     </div>
