--- a/requestbin/static/css/styles.css
+++ b/requestbin/static/css/styles.css
@@ -35,14 +35,14 @@ hr {
   color: #2ecc71;
 }
 .accent-red {
-  color: #55ede0;
+  color: #53bad3;
 }
 .accent-bg-green {
   background: #2ecc71;
   padding: 4px 8px;
 }
 .accent-bg-red {
-  background: #55ede0;
+  background: #53bad3;
   padding: 4px 12px;
   color: #ffffff;
 }
