--- a/requestbin/static/css/styles.css
+++ b/requestbin/static/css/styles.css
@@ -42,9 +42,8 @@ hr {
   padding: 4px 8px;
 }
 .accent-bg-red {
-  background: #53bad3;
   padding: 4px 12px;
-  color: #ffffff;
+  color: #53bad3;
 }
 .runscope-wrap {
   padding: 4px 20px;
