--- a/requestbin/static/css/styles.css
+++ b/requestbin/static/css/styles.css
@@ -408,10 +408,10 @@ header {
 /* BTN-DEFAULT */
 /* BTN-SUCCESS */
 .btn-success {
-  background-color: #2ecc71;
+  background-color: #53bad3;
   color: #fff;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 0 1px #25a25a, 0 1px 2px rgba(0, 0, 0, 0.1), inset 0 1px 1px rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 0 1px #53bad3, 0 1px 2px rgba(0, 0, 0, 0.1), inset 0 1px 1px rgba(255, 255, 255, 0.2);
 }
 .btn-success:hover {
   background-color: #47d583;
