--- a/requestbin/static/css/styles.css
+++ b/requestbin/static/css/styles.css
@@ -414,10 +414,10 @@ header {
   box-shadow: 0 0 0 1px #53bad3, 0 1px 2px rgba(0, 0, 0, 0.1), inset 0 1px 1px rgba(255, 255, 255, 0.2);
 }
 .btn-success:hover {
-  background-color: #47d583;
+  background-color: #53baff;
 }
 .btn-success:active {
-  background-color: #2ecc71;
+  background-color: #53bad3;
 }
 /* BTN-WARNING */
 .btn-warning {
