--- a/requestbin/templates/home.html
+++ b/requestbin/templates/home.html
@@ -16,8 +16,8 @@
         <div class="banner-hero">
             <h2 class="banner-header"><span class="accent-bg-red">Check ReCharge WebHooks</span></h2>
             <h3 class="banner-subheader">
-              RequestBin gives you a URL that will collect requests made to it and let you inspect them in a human-friendly way.<br>
-              Use RequestBin to see what your HTTP client is sending or to inspect and debug webhook requests.</h3>
+              RechargeBin gives you a URL that will collect requests made to it and let you inspect them in a human-friendly way.<br>
+              Use RechargeBin to see what your HTTP client is sending or to inspect and debug webhook requests.</h3>
 
             <form class="form-inline">
               <p class="banner-button">
